--- a/public/css/biomed/navbar.less
+++ b/public/css/biomed/navbar.less
@@ -43,7 +43,7 @@
 	
 	.navbar-inner {
 		background-color: @navbarSecondaryBackground;
-		min-height: auto;
+		min-height: 40px;
 	}
 
 	.nav > li {
