--- a/public/partials/workorders/add.html
+++ b/public/partials/workorders/add.html
@@ -47,6 +47,12 @@
                                                 <input type="text" ui-select2="emailsOptions" ng-model="model.emails" class="input-xxlarge" />
 					</div>
 				</div>
+				<div class="control-group">
+					<label class="control-label">Alternative Contact</label>
+					<div class="controls">
+						<input ng-model="model.alternativeContact" type="text" class="input-large">
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
