--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -12,7 +12,7 @@
 <div ng-hide="loading" class="tabbable">
 	<div class="tab-content">
 		<div class="tab-pane active form" title="Details">
-			<div class="form-section">
+			<form name="form" class="form-section" style="margin-bottom: 0">
 				<div class="section-label">Status</div>
 				<div class="section-container">
 					<div ng-hide="status.visible" class="form-preview">
@@ -32,20 +32,33 @@
 								</select>
 							</div>
 						</div>
+						<div class="control-group" ng-show="status.model.status == 'invoiced' || status.model.status == 'paid'">
+							<label class="control-label">Invoice Number</label>
+							<div class="controls">
+								<input ng-model="status.model.invoiceNumber" type="text" class="input-small" ng-required="status.model.status == 'invoiced' || status.model.status == 'paid'">
+							</div>
+						</div>
+						<div class="control-group" ng-show="status.model.status == 'paid'">
+							<label class="control-label">Check Number</label>
+							<div class="controls">
+								<input ng-model="status.model.checkNumber" type="text" class="input-small" ng-required="status.model.status == 'paid'">
+							</div>
+						</div>
 						<div class="form-actions">
-							<button ng-click="status.save(false)" type="button" class="btn btn-primary">Save</button>
-							<button ng-click="status.save(true)" type="button" class="btn">Save & Notify</button>
+							<button ng-disabled="form.$invalid" ng-click="status.save(false)" type="button" class="btn btn-primary">Save</button>
+							<button ng-disabled="form.$invalid" ng-click="status.save(true)" type="button" class="btn">Save & Notify</button>
 							<button ng-click="status.reset()" type="button" class="btn">Cancel</button>
 						</div>
 					</div>
 				</div>
-			</div>
+			</form>
 
                         <div class="form-section">
-                                <div class="section-label">Additional E-Mails</div>
+                                <div class="section-label">Additional Contact Information</div>
                                 <div class="section-container">
                                         <div ng-hide="emails.visible" class="form-preview">
-						<span ng-repeat="email in master.emails"><b>{{email}}</b><span ng-show="!$last">, </span></span>
+						<span ng-show"master.emails" ng-repeat="email in master.emails"><b>{{email}}</b><span ng-show="!$last">, </span></span>
+						<span ng-show="master.alternativeContact">{{master.alternativeContact}}<br></span>
                                                 <a ng-click="emails.edit()" ng-class="{disabled: editing}" ng-show="accountHasPermission('system.edit')">Edit</a>
                                         </div>
                                         <div ng-show="emails.visible" class="form-editor">
@@ -55,6 +68,12 @@
 								<input type="text" ui-select2="emailsOptions" ng-model="emails.model.emails" class="input-xxlarge" />
                                                         </div>
                                                 </div>
+						<div class="control-group">
+							<label class="control-label">Alternative Contact</label>
+							<div class="controls">
+								<input ng-model="emails.model.alternativeContact" type="text" class="input-large">
+							</div>
+						</div>
                                                 <div class="form-actions">
                                                         <button ng-click="emails.save(false)" type="button" class="btn btn-primary">Save</button>
                                                         <button ng-click="emails.save(true)" type="button" class="btn">Save & Notify</button>
