--- a/public/partials/accounting/index.html
+++ b/public/partials/accounting/index.html
@@ -11,8 +11,15 @@
 	                <input type="text" ng-model="query" class="input-large" placeholder="Search">
 		            <span class="add-on"><i class="icon-search"></i></span>
 	            </div>
+                    <a ng-click="selectPage()" class="btn">All</a>
+                    <a ng-click="selectPage('scheduled')" class="btn">Scheduled</a>
+                    <a ng-click="selectPage('invoiced')" class="btn">Invoiced</a>
+                    <a ng-click="selectPage('paid')" class="btn">Paid</a>
 		</div>
     		<div class="pull-right">
+                    <div class="pull-right">
+                            <span class="toolbelt-text">Total: {{total}}</span>
+                    </div>
 	            <span class="toolbelt-text">Start: </span>
 	            <div class="input-append">
 	            	<input ng-model="start" datepicker type="text" class="input-medium">
@@ -32,9 +39,7 @@
 					<th style="width: 30%" ng-class="selectedCls('client.name')" ng-click="changeSorting('client.name')">Client</th>
 					<th style="width: 10%" ng-class="selectedCls('scheduling.start')" ng-click="changeSorting('scheduling.start')">Date</th>
 					<th style="width: 10%" ng-class="selectedCls('invoiceNumber')" ng-click="changeSorting('invoiceNumber')">Invoice #</th>
-					<th style="width: 10%" ng-class="selectedCls('invoicedOn')" ng-click="changeSorting('invoicedOn')">Invoice Date</th>
 					<th style="width: 10%" ng-class="selectedCls('checkNumber')" ng-click="changeSorting('checkNumber')">Check #</th>
-					<th style="width: 10%" ng-class="selectedCls('paidOn')" ng-click="changeSorting('paidOn')">Paid Date</th>
 					<th style="width: 10%" ng-class="selectedCls('status')" ng-click="changeSorting('status')">Status</th>
 				</tr>
 			</thead>
@@ -48,9 +53,7 @@
 					<td><a ng-href="/clients/{{workorder.client._id}}">{{workorder.client.name}} ({{workorder.client.identifier}})</a></td>
 					<td>{{workorder.scheduling.start | date}}</td>
 					<td>{{workorder.invoiceNumber}}</td>
-					<td>{{workorder.invoicedOn | date}}</td>
 					<td>{{workorder.checkNumber}}</td>
-					<td>{{workorder.paidOn | date}}</td>
 					<td>{{workorder.status}}</td>
 				</tr>
 			</tbody>
