--- a/public/partials/schedule/pms.html
+++ b/public/partials/schedule/pms.html
@@ -9,9 +9,14 @@
 	<div class="span12">
 		<div class="toolbelt">
 			<a href="/clients/add" class="btn btn-primary"  ng-show="accountHasPermission('system.edit')">Create new Workorder</a>
+				<span class="toolbelt-text">Frequency:</span>
+					<select ng-model="frequency" name="frequency" class="input-xlarge">
+						<option value="">All</option>
+						<option ng-repeat="f in frequencies" value="{{f}}">{{f}}</option>
+					</select>
 			<div class="pull-right">
 				<span class="toolbelt-text">Month:</span>
-	            <div class="input-append">
+			        <div class="input-append">
 					<select ng-model="month" name="month" class="input-xlarge">
 						<option value="0">January</option>
 						<option value="1">February</option>
@@ -26,8 +31,8 @@
 						<option value="10">November</option>
 						<option value="11">December</option>
 					</select>
-		            <span class="add-on"><i class="icon-calendar"></i></span>
-	            </div>
+		            		<span class="add-on"><i class="icon-calendar"></i></span>
+	            		</div>
 			</div>
 		</div>
 		<table class="biomed-table" infinite-scroll="addItems()" can-load="canLoad" threshold="300">
