--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -16,39 +16,7 @@
 				<div class="section-label">Status</div>
 				<div class="section-container">
 					<div ng-hide="status.visible" class="form-preview">
-						{{master.status}}<br>
-						<a ng-click="status.edit()" ng-class="{disabled: editing}" ng-show="accountHasPermission('system.edit')">Edit</a>
-					</div>
-					<div ng-show="status.visible" class="form-editor">
-						<div class="control-group">
-							<label class="control-label">Status</label>
-							<div class="controls">
-								<select ng-model="status.model.status" name="status" class="input-xlarge">
-									<option value="scheduled">Scheduled</option>
-									<option value="invoiced">Invoiced</option>
-									<option value="paid">Paid</option>
-									<option value="submitted">Submitted</option>
-									<option value="n/a">N/A</option>
-								</select>
-							</div>
-						</div>
-						<div class="control-group" ng-show="status.model.status == 'invoiced' || status.model.status == 'paid'">
-							<label class="control-label">Invoice Number</label>
-							<div class="controls">
-								<input ng-model="status.model.invoiceNumber" type="text" class="input-small" ng-required="status.model.status == 'invoiced' || status.model.status == 'paid'">
-							</div>
-						</div>
-						<div class="control-group" ng-show="status.model.status == 'paid'">
-							<label class="control-label">Check Number</label>
-							<div class="controls">
-								<input ng-model="status.model.checkNumber" type="text" class="input-small" ng-required="status.model.status == 'paid'">
-							</div>
-						</div>
-						<div class="form-actions">
-							<button ng-disabled="form.$invalid" ng-click="status.save(false)" type="button" class="btn btn-primary">Save</button>
-							<button ng-disabled="form.$invalid" ng-click="status.save(true)" type="button" class="btn">Save & Notify</button>
-							<button ng-click="status.reset()" type="button" class="btn">Cancel</button>
-						</div>
+						<b>{{master.status}}</b><br>
 					</div>
 				</div>
 			</form>
@@ -345,6 +313,35 @@
 					</div>
 				</div>
 			</div>
+			<form name="form" class="form-section" style="margin-bottom: 0">
+				<div class="section-label">Billing</div>
+				<div class="section-container">
+					<div ng-hide="status.visible" class="form-preview">
+						<span ng-show="master.invoiceNumber">Invoice Number: <b>{{master.invoiceNumber}}</b><br></span>
+						<span ng-show="master.checkNumber">Check Number: <b>{{master.checkNumber}}</b><br></span>
+						<a ng-click="status.edit()" ng-class="{disabled: editing}" ng-show="accountHasPermission('system.edit.billing')">Edit</a>
+					</div>
+					<div ng-show="status.visible" class="form-editor">
+						<div class="control-group">
+							<label class="control-label">Invoice Number</label>
+							<div class="controls">
+								<input ng-disabled="status.model.checkNumber" ng-model="status.model.invoiceNumber" type="text" class="input-small">
+							</div>
+						</div>
+						<div class="control-group">
+							<label class="control-label">Check Number</label>
+							<div class="controls">
+								<input ng-disabled="!status.model.invoiceNumber" ng-model="status.model.checkNumber" type="text" class="input-small">
+							</div>
+						</div>
+						<div class="form-actions">
+							<button ng-disabled="form.$invalid" ng-click="status.save(false)" type="button" class="btn btn-primary">Save</button>
+							<button ng-disabled="form.$invalid" ng-click="status.save(true)" type="button" class="btn">Save & Notify</button>
+							<button ng-click="status.reset()" type="button" class="btn">Cancel</button>
+						</div>
+					</div>
+				</div>
+			</form>
 			<div class="form-section">
 				<div class="section-label">Other</div>
 				<div class="section-container">
