--- a/public/partials/accounting/index.html
+++ b/public/partials/accounting/index.html
@@ -11,7 +11,7 @@
 	                <input type="text" ng-model="query" class="input-large" placeholder="Search">
 		            <span class="add-on"><i class="icon-search"></i></span>
 	            </div>
-                    <a ng-click="selectPage()" class="btn">All</a>
+                    <a ng-click="selectPage('!n/a')" class="btn">All</a>
                     <a ng-click="selectPage('scheduled')" class="btn">Scheduled</a>
                     <a ng-click="selectPage('invoiced')" class="btn">Invoiced</a>
                     <a ng-click="selectPage('paid')" class="btn">Paid</a>
