--- a/public/partials/schedule/pms.html
+++ b/public/partials/schedule/pms.html
@@ -1,5 +1,6 @@
 <ul class="breadcrumb">
-	<li><a href="/clients"><i class="icon-briefcase"></i> Schedule</a><li>
+	<li><a href="/schedule/pms"><i class="icon-briefcase"></i>Preventive Maintenance</a><li>
+	<li><a href="/schedule/pms/report"><i class="icon-book"></i>Frequency Report</a></li>
 </ul>
 <header>
 	<h1>Preventive Maintenance</h1>
@@ -32,6 +33,7 @@
                                                                        	<option value="Quarterly">Quarterly</option>
                                                                        	<option value="RAE">RAE</option>
                                                                        	<option value="Semi">Semi</option>
+									<option	value="Sterilizer - Cleaning">Sterilizer - Cleaning</option>
                                                                        	<option value="Sterilizer - F">Sterilizer - F</option>
                                                                        	<option value="Sterilizer - TT">Sterilizer - TT</option>
                                                                        	<option value="Vaporizer">Vaporizer</option>
