--- a/public/partials/schedule/index.html
+++ b/public/partials/schedule/index.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-	<li><a href="/clients"><i class="icon-calendar"></i> Schedule</a><li>
+	<li><a href="/schedule"><i class="icon-calendar"></i> Schedule</a><li>
 </ul>
 <header>
 	<h1>Schedule</h1>
