--- a/public/partials/workorders/add.html
+++ b/public/partials/workorders/add.html
@@ -16,9 +16,7 @@
 				<div class="control-group">
 					<label class="control-label">Client</label>
 					<div class="controls">
-						<select ui-select2 ng-model="model.client" data-placeholder="Choose a Client"  class="input-xxlarge">
-							<option ng-repeat="client in clients" value="{{client._id}}">{{client.name}} ({{client.identifier}})</option>
-						</select>
+						<input type="hidden" ng-model="clientPicker" ui-select2="clientOpts" />
 					</div>
 				</div>
 				<div class="control-group" ng-show="currentClient.address">
@@ -301,8 +299,8 @@
 	<div class="form-section">
 		<div class="section-label">&nbsp;</div>
 		<div class="section-container">
-                        <button ng-click="save(false)" type="button" class="btn btn-primary">Save</button>
-			<button ng-click="save(true)" type="button" class="btn">Save & Notify</button>
+                        <button ng-disabled="!model.client" ng-click="save(false)" type="button" class="btn btn-primary">Save</button>
+			<button ng-disabled="!model.client" ng-click="save(true)" type="button" class="btn">Save & Notify</button>
 		</div>
 	</div>
 </div>
