--- a/public/partials/schedule/index.html
+++ b/public/partials/schedule/index.html
@@ -8,8 +8,8 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="toolbelt">
-			<a href="/workorders/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Workorder</a>
-			<a href="/workorders/add?workorderType=meeting" class="btn" ng-show="accountHasPermission('system.edit')">Create new Meeting</a>
+			<a href="/workorders/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Work Order</a>
+			<a href="/workorders/add?workorderType=meeting" class="btn" ng-show="accountHasPermission('system.edit')">Meeting</a>
 			<div class="pull-right">
 	            <span class="toolbelt-text">Group: </span>
 	            <div class="input-append">
