--- a/public/partials/schedule/pms.html
+++ b/public/partials/schedule/pms.html
@@ -9,7 +9,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="toolbelt">
-			<a href="/clients/add" class="btn btn-primary"  ng-show="accountHasPermission('system.edit')">Create new Workorder</a>
+			<a href="/clients/add" class="btn btn-primary"  ng-show="accountHasPermission('system.edit')">Work Order</a>
 				<span class="toolbelt-text">Filter:</span>
 					<select ng-model="filter" name="filter" class="input-xlarge">
 						<option value="all">All</option>
