--- a/public/partials/deviceTypes/add.html
+++ b/public/partials/deviceTypes/add.html
@@ -1,9 +1,9 @@
 <ul class="breadcrumb">
     <li><a href="/devices"><i class="icon-briefcase"></i> Devices</a><span class="divider"></span><li>
-    <li class="active">Edit Device<li>
+    <li class="active">New Device<li>
 </ul>
 <header>
-    <h1>Edit Device</h1>
+    <h1>New Device</h1>
 </header>
 
 <form name="form" class="form">
@@ -64,7 +64,7 @@
                 <div class="control-group">
                     <label class="control-label">Images</label>
                     <div class="controls">
-                        <div class="dropzone" dropzone="imageOpts" existing="existingImages" prefix="devices/"></div>
+                        <div class="dropzone" dropzone="imageOpts"></div>
                     </div>
                 </div>
             </div>
