--- a/public/partials/deviceTypes/index.html
+++ b/public/partials/deviceTypes/index.html
@@ -8,7 +8,7 @@
 <div class="row-fluid">
     <div class="span12">
         <div class="toolbelt">
-            <a href="/devices/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Device</a>
+            <a href="/deviceTypes/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Device</a>
             <div class="pull-right">
                 <span class="toolbelt-text">Search:</span>
                 <div class="input-append">
@@ -33,7 +33,7 @@
                     <td>{{device.category}}</td>
                     <td>{{device.make}}</td>
                     <td>{{device.model}}</td>
-                    <td><a href="/devices/{{device._id}}">Edit</a></td>
+                    <td><a href="/deviceTypes/{{device._id}}">Edit</a></td>
                 </tr>
             </tbody>
         </table>
