--- a/public/partials/devices/add.html
+++ b/public/partials/devices/add.html
@@ -1,80 +1,80 @@
 <ul class="breadcrumb">
-	<li><a href="/devices"><i class="icon-briefcase"></i> Devices</a><span class="divider"></span><li>
-	<li class="active">New Device<li>
+    <li><a href="/devices"><i class="icon-briefcase"></i> Devices</a><span class="divider"></span><li>
+    <li class="active">New Device<li>
 </ul>
 <header>
-	<h1>New Device</h1>
+    <h1>New Device</h1>
 </header>
 
 <form name="form" class="form">
-	<div class="form-section">
-		<div class="section-label">Device Identification</div>
-		<div class="section-container">
-			<div class="form-editor">
-                                <div class="control-group">
-                                        <label class="control-label">Device Type</label>
-                                        <div class="controls">
-                                                <input type="hidden" ng-model="deviceTypePicker" ui-select2="deviceTypeOpts" />
-                                        </div>
-                                </div>
-                                <div class="control-group">
-                                        <label class="control-label">Make</label>
-                                        <div class="controls">
-                                                <input type="hidden" ng-model="makePicker" ui-select2="makeOpts" />
-                                        </div>
-                                </div>
-				<div class="control-group">
-					<label class="control-label">Model</label>
-					<div class="controls">
-						<input ng-model="model.model" type="text" class="input-xlarge">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="form-section">
-		<div class="section-label">Device Details</div>
-		<div class="section-container">
-			<div class="form-editor">
-				<div class="control-group">
-					<label class="control-label">Technical Data</label>
-					<div class="controls">
-						<textarea ng-model="model.technicalData" type="text" class="input-xxlarge"></textarea>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">Links</label>
-					<div class="controls">
-						<textarea ng-model="model.links" type="text" class="input-xxlarge"></textarea>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">Recommended Parts</label>
-					<div class="controls">
-						<textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="form-section">
-		<div class="section-label">Images</div>
-		<div class="section-container">
-			<div class="form-editor">
-				<div class="control-group">
-					<label class="control-label">Images</label>
-					<div class="controls">
-						<div class="dropzone" dropzone="imageOpts"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="form-section">
+        <div class="section-label">Device Identifieion</div>
+        <div class="section-container">
+            <div class="form-editor">
+                <div class="control-group">
+                    <label class="control-label">Device Type</label>
+                    <div class="controls">
+                        <input type="hidden" ng-model="categoryPicker" ui-select2="categoryOpts" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Make</label>
+                    <div class="controls">
+                        <input type="hidden" ng-model="makePicker" ui-select2="makeOpts" />
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Model</label>
+                    <div class="controls">
+                        <input type="hidden" ng-model="modelPicker" ui-select2="modelOpts">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-section">
+        <div class="section-label">Device Details</div>
+        <div class="section-container">
+            <div class="form-editor">
+                <div class="control-group">
+                    <label class="control-label">Technical Data</label>
+                    <div class="controls">
+                        <textarea ng-model="model.technicalData" type="text" class="input-xxlarge"></textarea>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Links</label>
+                    <div class="controls">
+                        <textarea ng-model="model.links" type="text" class="input-xxlarge"></textarea>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label">Recommended Parts</label>
+                    <div class="controls">
+                        <textarea ng-model="model.partsRecommended" type="text" class="input-xxlarge"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-section">
+        <div class="section-label">Images</div>
+        <div class="section-container">
+            <div class="form-editor">
+                <div class="control-group">
+                    <label class="control-label">Images</label>
+                    <div class="controls">
+                        <div class="dropzone" dropzone="imageOpts"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	<div class="form-section">
-		<div class="section-label">&nbsp;</div>
-		<div class="section-container">
-			<button ng-click="save()" ng-disabled="form.$invalid" type="button" class="btn btn-primary">Save</button>
-		</div>
-	</div>
+    <div class="form-section">
+        <div class="section-label">&nbsp;</div>
+        <div class="section-container">
+            <button ng-click="save()" ng-disabled="form.$invalid" type="button" class="btn btn-primary">Save</button>
+        </div>
+    </div>
 </form>
